# sentinel

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.ros  README.md  vcpkg.json
agent/include/sentinel/agent/: allocation.hpp  autonomy.hpp
agent/src/: allocation.cpp  autonomy.cpp  main.cpp
benchmarks/seeds/: SHA256SUMS  development.jsonl  holdout.jsonl  manifest.json
config/: benchmark.json  scenario_generation.json  scenario_strata.json
core/include/sentinel/core/: event_log.hpp  hash.hpp  network.hpp  rng.hpp  scenario.hpp  simulator.hpp
core/src/: event_log.cpp  hash.cpp  network.cpp  rng.cpp  scenario.cpp  simulator.cpp
docs/: architecture.md  benchmark-result.json  benchmarking.md
planning/include/sentinel/planning/: planner.hpp
planning/src/: planner.cpp
proto/include/sentinel/protocol/: arguments.hpp  framing.hpp
proto/sentinel/v1/: sentinel.proto
proto/src/: framing.cpp
ros2/sentinel_gazebo/: CMakeLists.txt  package.xml
ros2/sentinel_gazebo/launch/: demo.launch.py
ros2/sentinel_gazebo/src/: adapter.cpp
ros2/sentinel_gazebo/worlds/: demo.sdf
runner/src/: main.cpp
scenarios/: basic_mission.textproto  charger_reroute.textproto  chokepoint_cbba.textproto  chokepoint_nearest.textproto  compound_failure_cbba.textproto  compound_failure_nearest.textproto  connected_cbba.textproto  connected_nearest.textproto  impaired_network_cbba.textproto  impaired_network_nearest.textproto  nominal.textproto  stress.textproto
sim/src/: main.cpp
tests/: allocation_test.cpp  autonomy_test.cpp  distributed_allocation_test.cpp  event_log_test.cpp  failure_recovery_test.cpp  framing_test.cpp  mission_execution_test.cpp  network_test.cpp  planner_test.cpp  reservation_test.cpp  rng_test.cpp  route_coordination_test.cpp  scenario_test.cpp  simulator_test.cpp  test_helpers.hpp  trace_export_test.cpp
tools/: analyze_benchmark.py  benchmark_io.py  benchmark_runtime.py  generate_scenarios.py  generate_seeds.py  run_benchmark.py  run_manifest.py  run_scenario.py  test_agent.py  test_benchmark.py  test_benchmark_e2e.py  test_runner.py  test_scenario_generator.py  test_supervisor.py
